# EdaCal

./: .gitignore  CMakeLists.txt  EdaCal  README.md  main.cpp
_codeql_build_dir/: CTestTestfile.cmake  edacal  test_calculator  test_linked_list  test_stack  test_tree
include/eda/: calculator.hpp  expression_tree.hpp  linked_list.hpp  node.hpp  stack.hpp  utils.hpp
informe/: informe.md
src/: calculator.cpp  expression_tree.cpp  linked_list.cpp  node.cpp  stack.cpp  utils.cpp
tests/: test_calculator.cpp  test_calculator_simple.cpp  test_linked_list.cpp  test_stack.cpp  test_tree.cpp
